syntax = "proto3";

package com.academy.fintech.pg;

option java_multiple_files = true;

service PaymentGateService{
  rpc MakeDisbursement(PaymentRequest) returns (PaymentResponse) {}
}

message PaymentRequest{
  string clientId = 1;
  string amount = 2;
}

message PaymentResponse{
  int64 disbursementDate = 1;
}